style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family: "Lato", sans-serif;
  background: #272a31;
}

a {
  text-decoration: none;
  color: #272a31;
}

@font-face {
  font-family: cocogoose_normal;
  src: url(fonts/Cocogoose_Pro_Light-trial.ttf);
}

@font-face {
  font-family: cocogoose_bold;
  src: url(fonts/Cocogoose_Pro-trial.ttf);
}

.cocogoose_normal {
  font-family: cocogoose_normal;
}

.cocogoose_bold {
  font-family: cocogoose_bold;
}

.black {
  color: #272a31;
}

.orange {
  color: #ec5242;
}

.gray {
  color: #d3d3d3;
}

.container {
  width: 100%;
  max-width: 600px;
  margin: 10px auto;
  padding: 30px 10px;
}

hr {
  width: 100px;
  margin-bottom: 15px;
}

header {
  background: #000
    url(https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80)
    center center no-repeat;
  height: auto;
  min-height: 500px;
  margin-top: -50px;
  padding-top: 85px;
}

.background_color {
  height: 100%;
  width: 100%;
  background: rgba(211, 211, 211, 0.9);
}

nav {
  border-bottom: rgba(39, 42, 49, 0.1) solid 2px;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  background: rgba(211, 211, 211, 0.9);
}

.navbar_container {
  font-size: 30px;
  display: flex;
  padding: 20px 30px;
  width: 500px;
  justify-content: space-around;
}

header nav a:hover {
  color: #ec5242;
}

.text {
  width: 100%;
  max-width: 700px;
  padding: 30px;
  margin: 40px 0 0 40px;
}

.md_header_text {
  font-size: 26px;
}

.lg_header_text {
  font-size: 60px;
  background: rgb(245, 77, 3);
  background: linear-gradient(
    90deg,
    rgba(236, 82, 66, 1) 0%,
    rgba(39, 42, 49, 1) 45%,
    rgb(233, 195, 26) 60%,
    rgba(236, 82, 66, 1) 70%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  line-height: 65px;
  padding: 15px 0;
}

.sm_header_text {
  font-size: 13px;
  padding: 15px;
  border: #d3d3d3 2px solid;
  margin-bottom: 20px;
  line-height: 19px;
}

.date {
  font-size: 40px;
}

.location {
  font-size: 16px;
}

.program_details {
  display: flex;
  flex-direction: column;
  font-size: 16px;
  font-weight: bold;
  justify-content: center;
  align-items: center;
}

.title {
  margin-bottom: 15px;
  font-size: 25px;
}

.orange_line {
  border: #ec5242 solid 2px;
}

.cards_container {
  display: flex;
  flex-direction: column;
}

.card {
  margin-top: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 30px;
  background: rgba(211, 211, 211, 0.1);
}

.card_title {
  font-size: 20px;
  text-align: center;
  padding: 0 10px;
}

i,
.material-icons {
  font-size: 36px;
}

.card_text {
  width: 60%;
  min-width: 60%;
  max-width: 60%;
}

.staff {
  background: #d3d3d3;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
}

.staff_grid {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(auto-fill, minmax(500px, 700px));
  grid-gap: 35px;
  justify-content: center;
}

.staff_card {
  display: flex;
}

.staff_personal {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
}

.luis .staff_image {
  background: #fff url(images/face.jpg) center center no-repeat;
  background-size: cover;
  width: 30%;
  min-width: 120px;
  height: 150px;
}

.sheldon .staff_image {
  background: #fff
    url(https://static.mujerhoy.com/noticias/201807/30/media/cortadas/jim_parsons_sheldon_cooper-kPoC-U60480611142MKI-644x483@MujerHoy.jpg)
    center center no-repeat;
  background-size: cover;
  width: 30%;
  min-width: 120px;
  height: 150px;
}

.amy .staff_image {
  background: #fff
    url(https://i.pinimg.com/originals/c6/af/0d/c6af0dac73fac7eead3b893d2d7caa05.jpg)
    center center no-repeat;
  background-size: cover;
  width: 30%;
  min-width: 120px;
  height: 150px;
}

.raj .staff_image {
  background: #fff
    url(http://images4.fanpop.com/image/photos/15200000/Kunal-Nayyar-aka-Raj-raj-koothrappali-15235341-319-480.jpg)
    center center no-repeat;
  background-size: cover;
  width: 30%;
  min-width: 120px;
  height: 150px;
}

.staff_name {
  font-size: 25px;
  margin-bottom: 15px;
}

.staff_cv {
  font-style: italic;
  font-size: 20px;
  margin-bottom: 15px;
}

.black_line {
  border: #272a31 solid 1px;
}

